@@ -22,38 +22,36 @@
  */
 package com.synopsys.integration.alert.channel.email.descriptor;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 
+import com.synopsys.integration.alert.channel.email.EmailChannel;
+import com.synopsys.integration.alert.common.descriptor.DescriptorMap;
 import com.synopsys.integration.alert.common.descriptor.config.field.CheckboxConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.field.ConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.field.TextInputConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.ui.ChannelDistributionUIConfig;
-import com.synopsys.integration.alert.common.persistence.accessor.DescriptorAccessor;
 
 @Component
 public class EmailDistributionUIConfig extends ChannelDistributionUIConfig {
-    private static final String LABEL_EMAIL_ADDRESSES = "Email Addresses";
     private static final String LABEL_SUBJECT_LINE = "Subject Line";
     private static final String LABEL_PROJECT_OWNER_ONLY = "Project Owner Only";
 
-    private static final String EMAIL_ADDRESSES_DESCRIPTION = "";
     private static final String EMAIL_SUBJECT_LINE_DESCRIPTION = "The subject line to use in the emails sent for this distribution job.";
     private static final String EMAIL_PROJECT_OWNER_ONLY_DESCRIPTION = "If true, emails will only be sent to the administrator(s) of the project. Otherwise, all users assigned to the project will get an email.";
 
     @Autowired
-    public EmailDistributionUIConfig(final DescriptorAccessor descriptorAccessor) {
-        super(EmailDescriptor.EMAIL_LABEL, EmailDescriptor.EMAIL_URL, EmailDescriptor.EMAIL_ICON, descriptorAccessor);
+    public EmailDistributionUIConfig(@Lazy final DescriptorMap descriptorMap) {
+        super(EmailChannel.COMPONENT_NAME, EmailDescriptor.EMAIL_LABEL, EmailDescriptor.EMAIL_URL, EmailDescriptor.EMAIL_ICON, descriptorMap);
     }
 
     @Override
     public List<ConfigField> createChannelDistributionFields() {
-        final ConfigField emailAddresses = TextInputConfigField.create(EmailDescriptor.KEY_EMAIL_ADDRESSES, LABEL_EMAIL_ADDRESSES, EMAIL_ADDRESSES_DESCRIPTION);
         final ConfigField subjectLine = TextInputConfigField.create(EmailDescriptor.KEY_SUBJECT_LINE, LABEL_SUBJECT_LINE, EMAIL_SUBJECT_LINE_DESCRIPTION);
         final ConfigField projectOwnerOnly = CheckboxConfigField.create(EmailDescriptor.KEY_PROJECT_OWNER_ONLY, LABEL_PROJECT_OWNER_ONLY, EMAIL_PROJECT_OWNER_ONLY_DESCRIPTION);
-        return Arrays.asList(emailAddresses, subjectLine, projectOwnerOnly);
+        return List.of(subjectLine, projectOwnerOnly);
     }
 }
